--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="hello">Hello World, TeamPFMActivity!</string>
-    <string name="app_name">Team-PFM</string>
+    <string name="hello">Hello World, FunFunActivity!</string>
+    <string name="app_name">FunFun</string>
+    <string name="DefaultValue">0</string>
 
 </resources>
