--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,14 @@
     <string name="hello">Hello World, FunFunActivity!</string>
     <string name="app_name">FunFun</string>
     <string name="DefaultValue">0</string>
+    <string name="mainpageTitle">Title</string>
+    <string name="mainpageConversion">Conversions</string>
+    <string name="mainpageCalculations">Calculations</string>
+    <string name="mainpageAddDelete">Add/Delete</string>
+    <string name="mainpageDocuments">Documents</string>
+    <string name="adddeletepageAdd">Add</string>
+    <string name="adddeletepageDelete">Delete</string>
+    <string name="settingspageThemes">Themes</string>
+    <string name="settingspageAbout">About</string>
 
 </resources>
