Add/Delete files as well as connections for all pages in calculations and the documents page

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -80,6 +80,7 @@
     </string-array>
     <string name="speedUnits">Speed Units</string>
     <string name="zero">0</string>
+    <string name="delete">Delete</string>
 	
 	
 </resources>
