finished final calculations pages

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -84,6 +84,11 @@
     <string name="welcomeText">Please select if you want to use the default airport list or your own:</string>
     <string name="defaultAirportList">Default Airport List</string>
     <string name="userList">Custom Airport List</string>
+    <string-array name="distance_units">
+        <item>SM</item>
+        <item>KM</item>
+        <item>NM</item>
+    </string-array>
 	
 	
 </resources>
